@@ -1,5 +1,11 @@
 2006-02-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* scripts/format-page.py (grab_gettext4): substitute
+	@<platform>-VERSION@ for the download page. This automates version
+	numbers for the download page.
+
+	* scripts/lilypondorg.py (Module): import from GUB. 
+
 	* site/images/proportional-fragment.png: new file
 
 	* site/images/lily-in-inkscape.png: new file
